--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,17 @@
             <version>1.3.1</version>
         </dependency>
         
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+        
     </dependencies>
 
 </project>
